[package]
name = "climb"
version = "1.0.22"
edition = "2021"
description = "Crate for creating easy and simple command-line interfaces"
readme = "README.md"
repository = "https://github.com/hunterlawson/climb"
license = "MIT OR Apache-2.0"
keywords = ["command", "line", "interface", "cli", "application"]
categories = ["command-line-interface"]

[dependencies]
maplit = "1.0.2"